--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,3 +44,28 @@ form > button {
   font-size: 50px;
   font-weight: bold;
 }
+
+/* REPOSITORY CARD */
+.global-repositories-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.repo-card {
+  border: 1px solid #000;
+  padding: 5px 10px;
+  margin: 7px;
+  width: max-content;
+  flex: 0 1 500px;
+}
+.repo-card > h1 > a {
+  color: #000;
+  font-weight: bold;
+}
+.repo-card > h1 > a:hover {
+  text-decoration: underline;
+}
+p {
+  margin: 0;
+}
