--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,32 +8,31 @@ body {
 .homepage-container {
   height: 100vh;
   padding: 10px;
-  background-color: #071739;
+  background-color: #323949;
 }
-
 .homepage-container > * {
   color: #fff;
 }
-
 .homepage-container > h1 {
   font-weight: bold;
   font-size: 60px;
+  padding-top: 50px;
 }
-
 .homepage-container > h2 {
   font-size: 35px;
 }
-
 form > button {
   color: #000;
   margin-left: 10px;
 }
-
+span.title-span-color {
+  color: #F5C014;
+}
 
 /* NOT FOUND PAGE */
 .notfound-container {
   height: 100vh;
-  background-color: #071739;
+  background-color: #323949;
   text-align: center;
   padding-top: 15%;
 }
@@ -50,22 +49,32 @@ form > button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 10px;
+  padding: 10px;
+  background-color: #323949;
 }
 .repo-card {
-  border: 1px solid #000;
+  border: 2px solid #F5C014;
+  border-radius: 15px;
   padding: 5px 10px;
   margin: 7px;
   width: max-content;
   flex: 0 1 500px;
+  background-color: #4c5265;
+  opacity: 1;
+  transition: .3s;
+}
+.repo-card:hover {
+  /*background-color: #323949;*/
+  cursor: default;
+  background-color: ;
 }
 .repo-card > h1 > a {
-  color: #000;
+  color: #F5C014;
   font-weight: bold;
 }
 .repo-card > h1 > a:hover {
   text-decoration: underline;
 }
-p {
+p, li {
   margin: 0;
 }
